# predictables-pca

./: README.md  pyproject.toml
.github/workflows/: multiple-python-versions-3-9-to-3-11.yml  on_push.yml
predictables_pca/: _PCA.py
predictables_pca/src/: __init__.py  _bootstrap_pca.py  _create_biplot.py  _create_loading_plot.py  _create_scree_plot.py  _perform_pca.py  _preprocessing.py  _testing.ipynb
predictables_pca/src/tests/: test_create_loading_plot.py  test_perform_pca.py  test_preprocessing.py  test_select_principal_components.py
