[project]
name = "predictables-pca"
version = "0.0.1"
description = "PCA module for use with predictables"
readme = "README.md"
license = "MIT"
keywords = [
  "predictables",
  "statistics",
  "data",
  "analysis",
  "predictive",
]
authors = [{ name = "Andy Weaver" }]
maintainers = [{ name = "Andy Weaver" }, { name = "Andy Weaver" }]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
